full-moon/tests/roblox_cases/fail/parser/const_count_mismatch_too_many/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/parser/const_count_mismatch_too_many
---
error[ast]: const declaration has 1 name but 2 values
  ┌─ source.lua:1:1
  │
1 │ const x = 1, 2
  │ ^^^^^
